eportal-yaml-manifests/eportal-print-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eportal-print-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eportal-print-ui
  template:
    metadata:
      labels:
        app: eportal-print-ui
    spec:
      containers:
        - name: eportal-print-ui
          image: 872850038545.dkr.ecr.us-east-1.amazonaws.com/eportal-print-ui:09bf3f1d0f7d22a51d11757897aa6173101dd9cd
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
