eportal-yaml-manifests/eportal-print-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eportal-print-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: eportal-print.info
      http:
        paths:
          - path: /vprint/(.*)
            pathType: Prefix
            backend:
              service:
                name: eportal-print-ui-service
                port:
                  number: 80
          - path: /vprint
            pathType: Prefix
            backend:
              service:
                name: eportal-print-ui-service
                port:
                  number: 80
